deploy: 361c4717c83660b80af86de19c0a17a2728fa4fa

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -2706,6 +2706,17 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
+<li>U+2000 EN QUAD: not included in any glyphset definition</li>
+<li>U+2001 EM QUAD: not included in any glyphset definition</li>
+<li>U+2003 EM SPACE: try adding nushu</li>
+<li>U+2004 THREE-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2005 FOUR-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2006 SIX-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2007 FIGURE SPACE: not included in any glyphset definition</li>
+<li>U+2008 PUNCTUATION SPACE: not included in any glyphset definition</li>
+<li>U+200A HAIR SPACE: not included in any glyphset definition</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: mongolian, yi</li>
+<li>U+205F MEDIUM MATHEMATICAL SPACE: not included in any glyphset definition</li>
 <li>U+221E INFINITY: try adding math</li>
 <li>U+2248 ALMOST EQUAL TO: try adding math</li>
 <li>U+2260 NOT EQUAL TO: try adding math</li>
@@ -2720,6 +2731,17 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
+<li>U+2000 EN QUAD: not included in any glyphset definition</li>
+<li>U+2001 EM QUAD: not included in any glyphset definition</li>
+<li>U+2003 EM SPACE: try adding nushu</li>
+<li>U+2004 THREE-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2005 FOUR-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2006 SIX-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2007 FIGURE SPACE: not included in any glyphset definition</li>
+<li>U+2008 PUNCTUATION SPACE: not included in any glyphset definition</li>
+<li>U+200A HAIR SPACE: not included in any glyphset definition</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: mongolian, yi</li>
+<li>U+205F MEDIUM MATHEMATICAL SPACE: not included in any glyphset definition</li>
 <li>U+221E INFINITY: try adding math</li>
 <li>U+2248 ALMOST EQUAL TO: try adding math</li>
 <li>U+2260 NOT EQUAL TO: try adding math</li>
@@ -2734,6 +2756,17 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
+<li>U+2000 EN QUAD: not included in any glyphset definition</li>
+<li>U+2001 EM QUAD: not included in any glyphset definition</li>
+<li>U+2003 EM SPACE: try adding nushu</li>
+<li>U+2004 THREE-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2005 FOUR-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2006 SIX-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2007 FIGURE SPACE: not included in any glyphset definition</li>
+<li>U+2008 PUNCTUATION SPACE: not included in any glyphset definition</li>
+<li>U+200A HAIR SPACE: not included in any glyphset definition</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: mongolian, yi</li>
+<li>U+205F MEDIUM MATHEMATICAL SPACE: not included in any glyphset definition</li>
 <li>U+221E INFINITY: try adding math</li>
 <li>U+2248 ALMOST EQUAL TO: try adding math</li>
 <li>U+2260 NOT EQUAL TO: try adding math</li>
@@ -2748,6 +2781,17 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
+<li>U+2000 EN QUAD: not included in any glyphset definition</li>
+<li>U+2001 EM QUAD: not included in any glyphset definition</li>
+<li>U+2003 EM SPACE: try adding nushu</li>
+<li>U+2004 THREE-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2005 FOUR-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2006 SIX-PER-EM SPACE: not included in any glyphset definition</li>
+<li>U+2007 FIGURE SPACE: not included in any glyphset definition</li>
+<li>U+2008 PUNCTUATION SPACE: not included in any glyphset definition</li>
+<li>U+200A HAIR SPACE: not included in any glyphset definition</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: mongolian, yi</li>
+<li>U+205F MEDIUM MATHEMATICAL SPACE: not included in any glyphset definition</li>
 <li>U+221E INFINITY: try adding math</li>
 <li>U+2248 ALMOST EQUAL TO: try adding math</li>
 <li>U+2260 NOT EQUAL TO: try adding math</li>
@@ -2842,38 +2886,22 @@ FONT_FAMILY_NAME = 'TASSchoolHand SemiBold' / SUBFAMILY_NAME = 'Regular'</p>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
 
 <details><summary>⚠️ TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- _part.c.out.fin
-
-- _part.e.cv05.alt
-
-- e.init
+<pre><code>- e.init
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- _part.c.out.fin
-
-- _part.e.cv05.alt
-
-- e.init
+<pre><code>- e.init
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ TASSchoolHand-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- _part.c.out.fin
-
-- _part.e.cv05.alt
-
-- e.init
+<pre><code>- e.init
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- _part.c.out.fin
-
-- _part.e.cv05.alt
-
-- e.init
+<pre><code>- e.init
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
@@ -2885,7 +2913,7 @@ The following math glyphs have a different width, though:</p>
 <p>Width = 824:
 less</p>
 <p>Width = 914:
-equal, greaterequal, notequal</p>
+notequal, greaterequal, equal</p>
 <p>Width = 825:
 greater</p>
 <p>Width = 931:
@@ -2901,7 +2929,7 @@ lessequal
 <details><summary>⚠️ TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 996 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 994:
-plus, divide, minus</p>
+minus, divide, plus</p>
 <p>Width = 898:
 less</p>
 <p>Width = 900:
@@ -2927,7 +2955,7 @@ greaterequal
 <details><summary>⚠️ TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 955 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 953:
-plus, divide, minus</p>
+minus, divide, plus</p>
 <p>Width = 861:
 less</p>
 <p>Width = 862:
