deploy: 3d28fe439057c70bc853e1ea153ef2b2c2896906

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -187,14 +187,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: yi, canadian-aboriginal, tifinagh</li>
+<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
 <li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, tifinagh, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, old-permic, math, tai-le, coptic, tifinagh, syriac, malayalam</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: coptic, syriac, old-permic, tai-le, canadian-aboriginal, tifinagh, malayalam, math</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030C COMBINING CARON: try adding one of: cherokee, tai-le</li>
@@ -226,7 +226,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: hebrew, khojki, buhid, adlam, newa, bassa-vah, music, dogra, sogdian, nko, psalter-pahlavi, syloti-nagri, telugu, tai-viet, duployan, buginese, kharoshthi, yi, thai, thaana, zanabazar-square, osage, miao, sinhala, manichaean, syriac, old-permic, tamil, math, tagalog, mahajani, modi, javanese, siddham, chakma, devanagari, elbasan, oriya, bengali, myanmar, limbu, mandaic, grantha, tagbanwa, gunjala-gondi, brahmi, ahom, tifinagh, mongolian, symbols, rejang, masaram-gondi, malayalam, sundanese, kayah-li, caucasian-albanian, sharada, balinese, khmer, meetei-mayek, bhaiksuki, phags-pa, hanifi-rohingya, kannada, gujarati, pahawh-hmong, tirhuta, wancho, khudawadi, hanunoo, marchen, coptic, gurmukhi, lepcha, takri, lao, mende-kikakui, cham, new-tai-lue, tibetan, soyombo, batak, tai-le, kaithi</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tai-viet, kaithi, music, pahawh-hmong, hanifi-rohingya, tirhuta, manichaean, old-permic, gurmukhi, modi, lao, osage, yi, limbu, miao, malayalam, dogra, kayah-li, tagbanwa, bhaiksuki, balinese, chakma, tifinagh, ahom, khmer, meetei-mayek, symbols, khudawadi, math, elbasan, telugu, psalter-pahlavi, soyombo, tibetan, masaram-gondi, takri, sundanese, grantha, cham, zanabazar-square, devanagari, new-tai-lue, lepcha, thai, thaana, adlam, caucasian-albanian, syloti-nagri, mende-kikakui, tagalog, rejang, oriya, hebrew, javanese, kharoshthi, buginese, nko, bengali, mongolian, duployan, kannada, sinhala, wancho, tai-le, myanmar, khojki, mahajani, mandaic, phags-pa, sogdian, coptic, hanunoo, siddham, brahmi, sharada, buhid, batak, syriac, gujarati, tamil, bassa-vah, newa, marchen, gunjala-gondi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -236,14 +236,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: yi, canadian-aboriginal, tifinagh</li>
+<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
 <li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, tifinagh, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, old-permic, math, tai-le, coptic, tifinagh, syriac, malayalam</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: coptic, syriac, old-permic, tai-le, canadian-aboriginal, tifinagh, malayalam, math</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030C COMBINING CARON: try adding one of: cherokee, tai-le</li>
@@ -275,7 +275,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: hebrew, khojki, buhid, adlam, newa, bassa-vah, music, dogra, sogdian, nko, psalter-pahlavi, syloti-nagri, telugu, tai-viet, duployan, buginese, kharoshthi, yi, thai, thaana, zanabazar-square, osage, miao, sinhala, manichaean, syriac, old-permic, tamil, math, tagalog, mahajani, modi, javanese, siddham, chakma, devanagari, elbasan, oriya, bengali, myanmar, limbu, mandaic, grantha, tagbanwa, gunjala-gondi, brahmi, ahom, tifinagh, mongolian, symbols, rejang, masaram-gondi, malayalam, sundanese, kayah-li, caucasian-albanian, sharada, balinese, khmer, meetei-mayek, bhaiksuki, phags-pa, hanifi-rohingya, kannada, gujarati, pahawh-hmong, tirhuta, wancho, khudawadi, hanunoo, marchen, coptic, gurmukhi, lepcha, takri, lao, mende-kikakui, cham, new-tai-lue, tibetan, soyombo, batak, tai-le, kaithi</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tai-viet, kaithi, music, pahawh-hmong, hanifi-rohingya, tirhuta, manichaean, old-permic, gurmukhi, modi, lao, osage, yi, limbu, miao, malayalam, dogra, kayah-li, tagbanwa, bhaiksuki, balinese, chakma, tifinagh, ahom, khmer, meetei-mayek, symbols, khudawadi, math, elbasan, telugu, psalter-pahlavi, soyombo, tibetan, masaram-gondi, takri, sundanese, grantha, cham, zanabazar-square, devanagari, new-tai-lue, lepcha, thai, thaana, adlam, caucasian-albanian, syloti-nagri, mende-kikakui, tagalog, rejang, oriya, hebrew, javanese, kharoshthi, buginese, nko, bengali, mongolian, duployan, kannada, sinhala, wancho, tai-le, myanmar, khojki, mahajani, mandaic, phags-pa, sogdian, coptic, hanunoo, siddham, brahmi, sharada, buhid, batak, syriac, gujarati, tamil, bassa-vah, newa, marchen, gunjala-gondi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -285,14 +285,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: yi, canadian-aboriginal, tifinagh</li>
+<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
 <li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, tifinagh, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, old-permic, math, tai-le, coptic, tifinagh, syriac, malayalam</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: coptic, syriac, old-permic, tai-le, canadian-aboriginal, tifinagh, malayalam, math</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030C COMBINING CARON: try adding one of: cherokee, tai-le</li>
@@ -324,7 +324,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: hebrew, khojki, buhid, adlam, newa, bassa-vah, music, dogra, sogdian, nko, psalter-pahlavi, syloti-nagri, telugu, tai-viet, duployan, buginese, kharoshthi, yi, thai, thaana, zanabazar-square, osage, miao, sinhala, manichaean, syriac, old-permic, tamil, math, tagalog, mahajani, modi, javanese, siddham, chakma, devanagari, elbasan, oriya, bengali, myanmar, limbu, mandaic, grantha, tagbanwa, gunjala-gondi, brahmi, ahom, tifinagh, mongolian, symbols, rejang, masaram-gondi, malayalam, sundanese, kayah-li, caucasian-albanian, sharada, balinese, khmer, meetei-mayek, bhaiksuki, phags-pa, hanifi-rohingya, kannada, gujarati, pahawh-hmong, tirhuta, wancho, khudawadi, hanunoo, marchen, coptic, gurmukhi, lepcha, takri, lao, mende-kikakui, cham, new-tai-lue, tibetan, soyombo, batak, tai-le, kaithi</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tai-viet, kaithi, music, pahawh-hmong, hanifi-rohingya, tirhuta, manichaean, old-permic, gurmukhi, modi, lao, osage, yi, limbu, miao, malayalam, dogra, kayah-li, tagbanwa, bhaiksuki, balinese, chakma, tifinagh, ahom, khmer, meetei-mayek, symbols, khudawadi, math, elbasan, telugu, psalter-pahlavi, soyombo, tibetan, masaram-gondi, takri, sundanese, grantha, cham, zanabazar-square, devanagari, new-tai-lue, lepcha, thai, thaana, adlam, caucasian-albanian, syloti-nagri, mende-kikakui, tagalog, rejang, oriya, hebrew, javanese, kharoshthi, buginese, nko, bengali, mongolian, duployan, kannada, sinhala, wancho, tai-le, myanmar, khojki, mahajani, mandaic, phags-pa, sogdian, coptic, hanunoo, siddham, brahmi, sharada, buhid, batak, syriac, gujarati, tamil, bassa-vah, newa, marchen, gunjala-gondi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -334,14 +334,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: yi, canadian-aboriginal, tifinagh</li>
+<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
 <li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, tifinagh, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, old-permic, math, tai-le, coptic, tifinagh, syriac, malayalam</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: coptic, syriac, old-permic, tai-le, canadian-aboriginal, tifinagh, malayalam, math</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030C COMBINING CARON: try adding one of: cherokee, tai-le</li>
@@ -373,7 +373,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: hebrew, khojki, buhid, adlam, newa, bassa-vah, music, dogra, sogdian, nko, psalter-pahlavi, syloti-nagri, telugu, tai-viet, duployan, buginese, kharoshthi, yi, thai, thaana, zanabazar-square, osage, miao, sinhala, manichaean, syriac, old-permic, tamil, math, tagalog, mahajani, modi, javanese, siddham, chakma, devanagari, elbasan, oriya, bengali, myanmar, limbu, mandaic, grantha, tagbanwa, gunjala-gondi, brahmi, ahom, tifinagh, mongolian, symbols, rejang, masaram-gondi, malayalam, sundanese, kayah-li, caucasian-albanian, sharada, balinese, khmer, meetei-mayek, bhaiksuki, phags-pa, hanifi-rohingya, kannada, gujarati, pahawh-hmong, tirhuta, wancho, khudawadi, hanunoo, marchen, coptic, gurmukhi, lepcha, takri, lao, mende-kikakui, cham, new-tai-lue, tibetan, soyombo, batak, tai-le, kaithi</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tai-viet, kaithi, music, pahawh-hmong, hanifi-rohingya, tirhuta, manichaean, old-permic, gurmukhi, modi, lao, osage, yi, limbu, miao, malayalam, dogra, kayah-li, tagbanwa, bhaiksuki, balinese, chakma, tifinagh, ahom, khmer, meetei-mayek, symbols, khudawadi, math, elbasan, telugu, psalter-pahlavi, soyombo, tibetan, masaram-gondi, takri, sundanese, grantha, cham, zanabazar-square, devanagari, new-tai-lue, lepcha, thai, thaana, adlam, caucasian-albanian, syloti-nagri, mende-kikakui, tagalog, rejang, oriya, hebrew, javanese, kharoshthi, buginese, nko, bengali, mongolian, duployan, kannada, sinhala, wancho, tai-le, myanmar, khojki, mahajani, mandaic, phags-pa, sogdian, coptic, hanunoo, siddham, brahmi, sharada, buhid, batak, syriac, gujarati, tamil, bassa-vah, newa, marchen, gunjala-gondi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -451,17 +451,13 @@ FONT_FAMILY_NAME = 'TASSchoolHand SemiBold' / SUBFAMILY_NAME = 'Regular'</p>
 <h3>Checking OS/2 usWinAscent & usWinDescent.</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/family/win_ascent_and_descent&gt;</div>
 
-<details><summary>🔥 TASSchoolHand-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinAscent value should be equal or greater than 2925, but got 2576 instead [code: ascent]</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
+<details><summary>🔥 TASSchoolHand-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinAscent value should be equal or greater than 2925, but got 2576 instead [code: ascent]</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
+<details><summary>🔥 TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinAscent value should be equal or greater than 2925, but got 2576 instead [code: ascent]</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
+<details><summary>🔥 TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
 </span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinAscent value should be equal or greater than 2925, but got 2576 instead [code: ascent]</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
+<details><summary>🔥 TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinDescent value should be equal or greater than 965, but got 903 instead [code: descent]</p>
 </span></li></ul></div></details>
 <h3>Do we have the latest version of FontBakery installed?</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/fontbakery_version&gt;</div>
@@ -708,9 +704,9 @@ multiply, plusminus
 <details><summary>⚠️ TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1034 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1033:
-divide, minus, plus</p>
+plus, divide, minus</p>
 <p>Width = 945:
-less, greater</p>
+greater, less</p>
 <p>Width = 1051:
 plusminus</p>
 <p>Width = 1016:
@@ -722,7 +718,7 @@ approxequal
 <details><summary>⚠️ TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1116 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1114:
-divide, minus, plus</p>
+plus, divide, minus</p>
 <p>Width = 1018:
 less</p>
 <p>Width = 1020:
@@ -738,7 +734,7 @@ approxequal
 <details><summary>⚠️ TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1075 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1073:
-divide, minus, plus</p>
+plus, divide, minus</p>
 <p>Width = 981:
 less</p>
 <p>Width = 982:
